ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.11, 4.0.6, 4.1.7
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • v4.0, v3.6, v3.4
    • Query 2018-12-31, Query 2019-01-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CVE-2018-250045

      Title: Invariant failure when explaining a find with a UUID
      CVE ID: CVE-2018-25004
      Description
      A user authorized to performing a specific type of query may trigger a denial of service by issuing a generic explain command on a find query. This issue affects: MongoDB Inc. MongoDB Server v4.0 versions prior to 4.0.6; MongoDB Server v3.6 versions prior to 3.6.11.

      CVSS score:
      This issue's CVSS:3.1 severity is scored at 4.8 using the following scoring metrics:
      CVSS:3.1/AV:N/AC:L/PR:H/UI:N/S:U/C:N/I:N/A:H/E:F/RL:U/RC:C

      Affected versions
      MongoDB Inc. MongoDB Server v4.0 versions prior to 4.0.6; MongoDB Server v3.6 versions prior to 3.6.11.

      Underlying operating systems affected: ALL

      How the issue was reported: Internally

      CWE: CWE-20: Improper Input Validation

            Assignee:
            Ian Boros
            Reporter:
            Spencer Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: