SERVER-38275 ban find explain with UUID